--- a/practicasflexbox/estilos.css
+++ b/practicasflexbox/estilos.css
@@ -34,3 +34,29 @@
     width: 100%;
     height: 600px;
 }
+.slider{
+    position: relative; /*respeta la posición del div*/
+    width: 100%; /*ancho*/
+    height: 100%; /*alto*/
+    display: flex; /*imagenes en fila*/
+    overflow: auto; /*corte la imagen*/
+    scroll-snap-type: x mandatory; /*salga del scroll con eje X*/
+}
+.slide {
+    flex:none; /*las imagenes no cambian de posición*/
+    scroll-snap-align: start; /*el scroll empiece a la izq*/
+    width: 100%; /*ancho del slider*/
+    height: 100%; /*alto del slider*/
+    display: flex; /*imagenes se mantengan en fila*/
+    justify-content: center; /*imagenes en el centro horizontalmente*/
+    align-items: center; /*imagenes en el centro verticalmente*/
+}
+.slide img{
+    width: 100%; /*ancho del slider*/
+    height: auto; /*alto del slider*/
+}
+/* Salen personajes*/
+#Personajes{
+    width: 100%;
+    height: 700px;
+}
